Refactor WIP: introduce Dataset (table, model, service, etc.) and refactor current repo and service layers to use it. An authenticated user (AppUser) owns datasets, which then own billing periods, billing records, and alarms.